--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,6 +1,6 @@
 {% extends "base.html"%}
 {% block content %}
 <h2>Dashboard</h2>
-<p>Welcome, {{ user.first_name }} {{ user.last_name }}!!</p>
+<p>Welcome {{ user.first_name }} {{ user.last_name }}!</p>
 <p>This is your dashboard where you can manage your budget and expenses.</p>
 {% endblock %}
