Added Logging and Categories creation and fetching

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -3,4 +3,6 @@
 <h2>Dashboard</h2>
 <p>Welcome {{ user.first_name }} {{ user.last_name }}!</p>
 <p>This is your dashboard where you can manage your budget and expenses.</p>
+
+{% include "categories.html" %}
 {% endblock %}
