--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -17,7 +17,25 @@
     <!-- Existing Categories List -->
     <ul>
         {% for category in categories %}
-        <li>{{category.name }} - Limit: {{category.limit_amount}}</li>
+        <li>
+            {{category.name }} - Limit: {{category.limit_amount}}
+
+
+            <!-- Edit Category -->
+            <form method="POST" action="/dashboard/categories/{{ category.id }}/edit" style="display:inline;">
+                <input type="hidden" name="token" value="{{ token }}">
+                <input type="text" name="name" value="{{ category.name }}" required>
+                <input type="number" name="limit_amount" value="{{ category.limit_amount }}" required>
+                <button type="submit">Edit</button>
+            </form>
+
+            <!-- Delete Category -->
+            <form method="POST" action="/dashboard/categories/{{ category.id }}/delete" style="display:inline;">
+                <input type="hidden" name="token" value="{{ token }}">
+                <button type="submit" onclick="return confirm('Are you sure you want to delete this category?');">Delete</button>
+            </form>
+        </li>
+        <br>    
         {% endfor %}
     </ul>
 </div>
