--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,13 +7,19 @@
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+  <body class="bg-light">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
       <div class="container">
-        <a class="navbar-brand" href="/">Bajeti</a>
+        <a class="navbar-brand fw-bold" href="/">Bajeti</a>
+        <div>
+          <a href="/logout" class="btn btn-outline-light btn-sm">Logout</a>
+        </div>
       </div>
     </nav>
-    <div class="container">
+
+    <!-- Main Content -->
+    <div class="container my-5">
       {% block content %}{% endblock %}
     </div>
 
