--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,7 +23,7 @@
         <a class="navbar-brand fw-bold" href="/">Bajeti</a>
 
         {% if show_menu %}
-        <!-- ✅ Hamburger Menu -->
+        <!--  Hamburger Menu -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu"
                 aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
