--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,7 @@
   <body class="bg-light">
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-body">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark border-bottom border-body">
       <div class="container">
         <!-- Brand -->
         <a class="navbar-brand fw-bold" href="/">Bajeti</a>
@@ -30,8 +30,8 @@
         </button>
 
         <!-- Menu Items -->
-        <div class="collapse navbar-collapse" id="navbarMenu">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarMenu">
+          <ul class="navbar-nav">
             <!-- Analysis -->
             <li class="nav-item">
               <a class="nav-link" href="/analysis">
@@ -49,7 +49,19 @@
         {% endif %}
       </div>
     </nav>
-
+    <div class="collapse" id="navbarToggleExternalContent" data-bs-theme="dark">
+      <div class="bg-dark p-4">
+        <h5 class="text-body-emphasis h4">Collapsed content</h5>
+        <span class="text-body-secondary">Toggleable via the navbar brand.</span>
+      </div>
+    </div>
+    <nav class="navbar navbar-dark bg-dark">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </nav>
     <!-- Main Content -->
     <div class="container my-5">
       {% block content %}{% endblock %}
