--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,9 +42,9 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-body">
       <div class="container">
         <!-- Brand -->
-        <a class="navbar-brand" href="/">Bajeti</a>
+        <a class="navbar-brand" href="/">Bajeti {{show_menu}}</a>
 
-        {% if show_menu %}
+        {% if show_menu == True %}
         <<!-- Toggler uses a visible Bootstrap Icon (works on Safari/Chrome mobile) -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu"
                 aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,7 +53,16 @@
         </button>
 
         <!-- Menu Items (right-aligned) -->
-        
+        <div class="collapse navbar-collapse" id="navbarMenu">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="/analysis"><i class="bi bi-graph-up me-1"></i>Analysis</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-danger" href="/logout"><i class="bi bi-box-arrow-right me-1"></i>Logout</a>
+            </li>
+          </ul>
+        </div>
         {% endif %}
       </div>
     </nav>
