--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,26 +46,27 @@
 
         {% if show_menu == True %}
         <<!-- Toggler uses a visible Bootstrap Icon (works on Safari/Chrome mobile) -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu"
-                aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
-          <!-- use a Bootstrap Icon instead of .navbar-toggler-icon background-image -->
-          <i class="bi bi-list"></i>
-        </button>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu"
+                  aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
+            <!-- use a Bootstrap Icon instead of .navbar-toggler-icon background-image -->
+            <i class="bi bi-list"></i>
+          </button>
 
-        <!-- Menu Items (right-aligned) -->
-        <div class="collapse navbar-collapse" id="navbarMenu">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="/analysis"><i class="bi bi-graph-up me-1"></i>Analysis</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-danger" href="/logout"><i class="bi bi-box-arrow-right me-1"></i>Logout</a>
-            </li>
-          </ul>
-        </div>
+          <!-- Menu Items (right-aligned) -->
+          <div class="collapse navbar-collapse" id="navbarMenu">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="/analysis"><i class="bi bi-graph-up me-1"></i>Analysis</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-danger" href="/logout"><i class="bi bi-box-arrow-right me-1"></i>Logout</a>
+              </li>
+            </ul>
+          </div>
         {% endif %}
       </div>
     </nav>
+    <p style="color: red;">DEBUG: show_menu = {{ show_menu }}</p>
 
     <!-- Main Content -->
     <div class="container my-5">
