--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,30 +31,8 @@
         </a>
 
         <!-- Menu wrapper (controlled via cookie JS) -->
-        <div id="navbarMenuWrapper" class="d-none">
-          <!-- Hamburger toggler -->
-          <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu"
-                  aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <!-- Menu -->
-          <div class="collapse navbar-collapse" id="navbarMenu">
-            <ul class="navbar-nav ms-auto align-items-lg-center mb-2 mb-lg-0">
-              <li class="nav-item px-lg-2">
-                <a class="nav-link d-flex align-items-center" href="/analysis">
-                  <i class="bi bi-graph-up me-1"></i>
-                  <span>Analysis</span>
-                </a>
-              </li>
-              <li class="nav-item px-lg-2">
-                <a class="nav-link text-danger d-flex align-items-center" href="/logout">
-                  <i class="bi bi-box-arrow-right me-1"></i>
-                  <span>Logout</span>
-                </a>
-              </li>
-            </ul>
-          </div>
+        <div>
+          <a href="/logout" class="btn btn-outline-light btn-sm">Logout</a>
         </div>
       </div>
     </nav>
